Updated verify user service, Added CustomUserDetailService Class